[package]
name = "node"
version = "0.1.0"
authors = ["Bertie <berniesnell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockchain = { path = "../blockchain" }
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
url = "1.2.0"
matches = "0.1"
parking_lot = "0.7"
jsonrpc-core = "10.0.1"
jsonrpc-ws-server = "10.0.1"
keccak-hash = "0.2.0"
tokio = "0.1"
