[package]
name = "node"
version = "0.1.0"
authors = ["Bertie <berniesnell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redistribution = { path = "../redistribution" }
openssl = "0.10.23"
tokio = "0.1"
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ws = "0.8.1"
uuid = { version = "0.7", features = ["serde", "v5"] }
